tests/errors/compiler/no_leftbr_in_stand_func/setmotor.c
void main()
{
	setmotor 1);
}
